add and apply create product crud
